Fixed logo spacing in home.css

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -1,3 +1,7 @@
+#logo {
+    margin-top: -10px;
+}
+
 .home-splash {
     margin-top: -100px;
     position: relative;
